testing fix for centering game properly on mobile

--- a/stylesheets/mythic.css
+++ b/stylesheets/mythic.css
@@ -376,7 +376,7 @@ span.close {
   
   section.info {
     font-size: 0.5rem;
-    min-width: 310px;
+    min-width: 300px;
     height: 50px;
     border-radius: 15px;
   }
@@ -409,7 +409,7 @@ span.close {
   
   .info {
     font-size: 0.9rem;
-    min-width: 420px;
+    min-width: 400px;
     height: 60px;
     border-radius: 20px;
   }
